<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/pref_category_general"
        android:key="@string/pref_category_general">

        <ListPreference
            android:title="Unit Measurement"
            android:summary="Unit measurement to use for dosages."
            android:key="@string/pref_unit_measurement"
            android:defaultValue="Imperial (US)"
            android:entries="@array/unit_measurements"
            android:entryValues="@array/unit_measurements" />

        <SwitchPreferenceCompat
            android:title="Remember Last Product"
            android:defaultValue="false"
            android:summary="Open last product used on startup."
            android:key="@string/pref_remember_last_product" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_about"
        android:key="@string/pref_category_about">
        <Preference
            android:key="app_version"
            android:title="@string/app_name"
            android:summary="1.0" />
        <PreferenceScreen
            android:key="about_author"
            android:title="@string/about_author"
            android:summary="@string/about_homepage">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/about_homepage" />
        </PreferenceScreen>
        <Preference
            android:key="about_rate"
            android:title="Rate this app"
            android:summary="@string/about_rate" />
        <Preference
            android:key="about_changelog"
            android:title="Change Log"
            android:summary="@string/about_changelog" />
        <Preference
            android:key="about_disclaimer"
            android:title="Disclaimer"
            android:summary="@string/about_disclaimer" />
    </PreferenceCategory>

</PreferenceScreen>