<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:layout_weight="1"
    android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/product_name_text_size"
                android:id="@+id/appname"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/accent"/>

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Version v"
                android:textSize="@dimen/product_detail_text_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:gravity="center_horizontal|center_vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher"
                    android:id="@+id/icon"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/product_parameter_unit_text_size"
                    android:text="@string/tap_icon_to_start"
                    android:gravity="center_horizontal" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:orientation="vertical"
                android:gravity="center_horizontal|bottom">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/product_parameter_unit_text_size"
                    android:text="@string/about_eula"
                    android:gravity="center_horizontal"
                    android:id="@+id/eula" />

                <TextView
                    android:id="@+id/disclaimer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/product_parameter_unit_text_size"
                    android:text="@string/about_disclaimer"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp" />
            </LinearLayout>
        </LinearLayout>

</ScrollView>